# kafka-pii-classifier

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_credentials.sh  start_api_server.sh
config/: config.yaml.example
src/: __init__.py  __version__.py  agent.py  main.py
src/config/: __init__.py  config_loader.py
src/integration/: README.md  __init__.py  api.py
src/kafka/: __init__.py  consumer.py  sampler.py  streaming_consumer.py
src/pii/: __init__.py  aws_detector.py  azure_detector.py  base_detector.py  classifier.py  cloud_llm_detector.py  detector.py  factory.py  gcp_detector.py  llm_agent.py  ollama_detector.py  pattern_detector.py  presidio_detector.py  service.py  types.py
src/reporting/: generator.py
src/schema_inference/: __init__.py  inferrer.py  json_parser.py
src/schema_registry/: __init__.py  client.py  tagger.py
src/utils/: __init__.py  avro_deserializer.py  exceptions.py  helpers.py  logger.py
tests/: __init__.py  setup_test_data.py  test_agent.py  test_classifier.py  test_cli.py  test_cloud_llm.py  test_config_loader.py  test_connections.py  test_detector.py  test_helpers.py  test_integration.py  test_pattern_detector.py  test_pii_detection.py  test_streaming.py  test_tagger.py
